--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body{
-  border: 2px solid red;
+  margin: 0;
+  /* border: 2px solid red; */
 }
 .search{
-background-color: blueviolet;
+/* background-color: blueviolet; */
 }
